--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
+  firebase_database: 12.0.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
